--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/open-book.ico">
-    <title>Учимся🤗</title>
-</head>
+    <title>Учимся</title>
+</head> 
 <body>
     <header class="header">
         <div class="header-container">
