--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/open-book.ico">
-    <title>Учимся test</title>
+    <title>Учимся test 2</title>
 </head> 
 <body>
     <header class="header">
